# ecom002_2014_1

./: README.md
Projeto/P1Charts/: CMakeLists.txt  README.md  main.c
Projeto/P1Charts/drawing/: CMakeLists.txt  drawing.c  drawing.h  drawingTest.c
Projeto/P1Charts/drawing/storage/: CMakeLists.txt  storage.c  storage.h  storageTest.c  test.json
Projeto/P1Charts/storage/: CMakeLists.txt  storage.c  storage.h  storageTest.c  test.json
Projeto/P1Charts_drawing/: CMakeLists.txt  drawing.h  drawingTest.c
aula_alocacao_dinamica/: alocacao.c
aula_arquivos/: CMakeLists.txt  arquivo.c  file.txt  file_W.txt  test.txt  test_file.c  test_original.txt
aula_cmake/: CMakeLists.txt  main.c
aula_cmake/AB/: CMakeLists.txt  a.c  b.c
aula_estruturas/: estrutura.c  estrutura2.c  t.c  t2  t2.c  test
aula_funcao/: main.c  operacoes.h  operacoess.c
aula_makefile/: CMakeLists.txt  Makefile  main.c  test
aula_makefile/includes/: a.h  b.h
aula_makefile/src/: a.c  b.c
aula_recursao/: fat.c
aula_scanf/: bingo  bingo.c  bingo2.c  main.c
aula_string/: split.c
aula_while/: main.c  testFor.c
resolucao_huxley/: Passadas do Relógio.in  imprima_o_numero_real_formatado.c  in.data  matriz_quadrada.c  passadas_do_relogio.c  test
